--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ add_executable(BlackMamba src/Engine/Game.cpp include/Game.hpp include/Settings.
         include/Player.hpp src/Math/GameMath.cpp include/GameMath.hpp src/Engine/Snake.cpp
         include/Snake.hpp src/Engine/Body.cpp include/Body.hpp src/Math/SnakeMath.cpp
         include/SnakeMath.hpp src/Engine/Poison.cpp include/Poison.hpp
-        include/Drawable.hpp src/Engine/Menu.cpp include/Menu.hpp)
+        include/Drawable.hpp src/Engine/Menu.cpp include/Menu.hpp include/HighScore.hpp src/Engine/HighScore.cpp)
 
 
 if (APPLE)
