--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ add_executable(BlackMamba src/Engine/Game.cpp include/Game.hpp include/Settings.
         include/Snake.hpp src/Engine/Body.cpp include/Body.hpp src/Math/SnakeMath.cpp
         include/SnakeMath.hpp src/Engine/Poison.cpp include/Poison.hpp
         include/Drawable.hpp src/Engine/Menu.cpp include/Menu.hpp include/HighScore.hpp src/Engine/HighScore.cpp
-        include/Drawable.hpp src/Engine/Menu.cpp include/Menu.hpp src/Engine/Help.cpp include/Help.hpp)
+        include/Drawable.hpp src/Engine/Menu.cpp include/Menu.hpp src/Engine/Help.cpp include/Help.hpp src/Engine/Sound.cpp include/Sound.hpp)
+
 
 
 
@@ -23,11 +24,15 @@ else()
     set(SFML_STATIC_LIBRARIES TRUE)
     set(SFML_DIR "C:\\SFML\\lib\\cmake\\SFML")
     include_directories(headers /usr/include c:/SFML/include)
+    include_directories(..\\lib)
+
 endif()
 
-find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+find_package(SFML 2.5 COMPONENTS system window graphics audio network audio  REQUIRED)
 include_directories(${SFML_INCLUDE_DIRS})
+link_directories(..\\lib)
 
-target_link_libraries(BlackMamba sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
+target_link_libraries(BlackMamba sfml-system sfml-window sfml-graphics sfml-audio sfml-network winMM.Lib)
+
 
 
